--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title> test 1 coursera</title>
+<head>
+  <title> test 1 coursera</title>
+</head>
 <body>
   <h1> title es. 1</h1>
 </body>
