--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  div, span {
+  background-color: blue;
+}
   <title> test 1 coursera</title>
 </head>
 <body>
-  <h1> title es. 1</h1>
+  <div>Hello</div>
+  <span>World!</span>
 </body>
 </html>
