--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
   div, span {
   background-color: blue;
 }
+  </style>
   <title> test 1 coursera</title>
 </head>
 <body>
